--- a/static/stat563/bib_math_stat.bib
+++ b/static/stat563/bib_math_stat.bib
@@ -2,14 +2,14 @@
 @article{sample,
   type={sample},
   number={},
-  subject={sample},
+  author={sample},
   title={sample},
   pages={}
 }
 
 @article{CDF,
   title={Cumulative distribution function $F_X(x)=P_X(X\le x)$},
-  subject={CDF},
+  author={CDF},
   type={Definition},
   pages={26},
   number={1501}
@@ -17,7 +17,7 @@
 
 @article{PDF,
   title={probability density function},
-  subject={PDF},
+  author={PDF},
   type={Definition},
   pages={},
   number={}
@@ -25,7 +25,7 @@
 
 @article{mean,
   title={expected value $Eg(X)=\sum_{-\infty}^\infty g(x)f_X(x)dx$},
-  subject={mean},
+  author={mean},
   type={Definition},
   pages={50},
   number={2201}
@@ -33,7 +33,7 @@
 
 @article{Var,
   title={variance},
-  subject={Var},
+  author={Var},
   type={Definition},
   pages={},
   number={}
@@ -41,7 +41,7 @@
 
 @article{Cor,
   title={correlation},
-  subject={Cor},
+  author={Cor},
   type={Definition},
   pages={},
   number={}
@@ -49,7 +49,7 @@
 
 @article{Cov,
   title={covariance},
-  subject={Cov},
+  author={Cov},
   type={Definition},
   pages={},
   number={}
@@ -57,7 +57,7 @@
 
 @article{Unif,
   title={Uniform distribution (a,b)},
-  subject={Unif},
+  author={Unif},
   type={Distribution},
   pages={},
   number={}
@@ -65,7 +65,7 @@
 
 @article{Bern,
   title={Bernoulli distribution (p)},
-  subject={Bern},
+  author={Bern},
   type={Distribution},
   pages={},
   number={}
@@ -73,7 +73,7 @@
 
 @article{Bino,
   title={Binomial distribution (n,p)},
-  subject={Bino},
+  author={Bino},
   type={Distribution},
   pages={},
   number={}
@@ -81,7 +81,7 @@
 
 @article{Pois,
   title={Poisson distribution $\lambda$},
-  subject={Pois},
+  author={Pois},
   type={Distribution},
   pages={84},
   number={3203}
@@ -89,7 +89,7 @@
 
 @article{SNorm,
   title={Standard Normal distribution},
-  subject={SNorm},
+  author={SNorm},
   type={Distribution},
   pages={},
   number={}
@@ -97,7 +97,7 @@
 
 @article{Norm,
   title={Normal distribution},
-  subject={Norm},
+  author={Norm},
   type={Distribution},
   pages={},
   number={}
@@ -106,7 +106,7 @@
 
 @article{Gamma,
   title={Gammal distribution},
-  subject={Gamma},
+  author={Gamma},
   type={Distribution},
   pages={},
   number={}
@@ -114,7 +114,7 @@
 
 @article{Beta,
   title={Beta distribution},
-  subject={Beta},
+  author={Beta},
   type={Distribution},
   pages={},
   number={}
@@ -122,7 +122,7 @@
 
 @article{Expo,
   title={Exponential distribution $\lambda$},
-  subject={Expo},
+  author={Expo},
   type={Distribution},
   pages={90},
   number={3301}
@@ -130,7 +130,7 @@
 
 @article{t,
   title={t distribution},
-  subject={t},
+  author={t},
   type={Distribution},
   pages={},
   number={}
@@ -138,7 +138,7 @@
 
 @article{Weib,
   title={Weibull distribution},
-  subject={Weib},
+  author={Weib},
   type={Distribution},
   pages={},
   number={}
@@ -146,7 +146,7 @@
 
 @article{Laplace,
   title={Laplace distribution},
-  subject={Laplace},
+  author={Laplace},
   type={Distribution},
   pages={},
   number={}
@@ -154,7 +154,7 @@
 
 @article{SPower,
   title={Standard Power distribution},
-  subject={Power},
+  author={Power},
   type={Distribution},
   pages={},
   number={}
@@ -162,7 +162,7 @@
 
 @article{lifetime,
   title={lifetime},
-  subject={lifetime},
+  author={lifetime},
   type={Definition},
   pages={},
   number={}
@@ -170,7 +170,7 @@
 
 @article{MGF,
   title={moment generating function},
-  subject={MGF},
+  author={MGF},
   type={Definition},
   pages={},
   number={}
@@ -178,7 +178,7 @@
 
 @article{joint,
   title={joint pdf},
-  subject={joint},
+  author={joint},
   type={Definition},
   pages={},
   number={}
@@ -186,7 +186,7 @@
 
 @article{cond,
   title={conditional pdf},
-  subject={cond},
+  author={cond},
   type={Definition},
   pages={},
   number={}
@@ -194,7 +194,7 @@
 
 @article{marg,
   title={marginal pdf},
-  subject={marg},
+  author={marg},
   type={Definition},
   pages={},
   number={}
@@ -202,7 +202,7 @@
 
 @article{trans,
   title={transformation},
-  subject={trans},
+  author={trans},
   type={Definition},
   pages={},
   number={}
@@ -210,7 +210,7 @@
 
 @article{Cheb,
   title={Chebychev inequality},
-  subject={Cheb},
+  author={Cheb},
   type={Theorem},
   pages={111},
   number={3601}
@@ -218,7 +218,7 @@
 
 @article{HypoT,
   title={Hypothesis Test},
-  subject={HypoT},
+  author={HypoT},
   type={Definition},
   pages={},
   number={}
@@ -226,7 +226,7 @@
 
 @article{power,
   title={power function },
-  subject={power},
+  author={power},
   type={Definition},
   pages={},
   number={}
@@ -234,7 +234,7 @@
 
 @article{LRT,
   title={likelihood ratio test},
-  subject={LRT},
+  author={LRT},
   type={Definition},
   pages={},
   number={}
@@ -242,7 +242,7 @@
 
 @article{MOM,
   title={Method of Moments},
-  subject={MOM},
+  author={MOM},
   type={Definition},
   pages={},
   number={}
@@ -250,7 +250,7 @@
 
 @article{MLE,
   title={Maximum Likelihood Estimators},
-  subject={MLE},
+  author={MLE},
   type={Definition},
   pages={315},
   number={7202}
@@ -258,7 +258,7 @@
 
 @article{MSE,
   title={mean-squared error},
-  subject={MSE},
+  author={MSE},
   type={Definition},
   pages={},
   number={}
@@ -266,7 +266,7 @@
 
 @article{BayesE,
   title={Bayes estimator},
-  subject={BayesE},
+  author={BayesE},
   type={Definition},
   pages={},
   number={}
@@ -274,7 +274,7 @@
 
 @article{FishI,
   title={Fisher information},
-  subject={FishI},
+  author={FishI},
   type={Definition},
   pages={},
   number={}
@@ -282,7 +282,7 @@
 
 @article{CI,
   title={confidence interval},
-  subject={CI},
+  author={CI},
   type={Definition},
   pages={},
   number={}
@@ -290,7 +290,7 @@
 
 @article{CRLB,
   title={Cramer-Rao Lower Bound},
-  subject={CRLB},
+  author={CRLB},
   type={Definition},
   pages={335(361)},
   number={}
@@ -298,7 +298,7 @@
 
 @article{suff,
   title={sufficient statistic},
-  subject={suff},
+  author={suff},
   type={Definition},
   pages={},
   number={}
@@ -306,7 +306,7 @@
 
 @article{comp,
   title={complete},
-  subject={comp},
+  author={comp},
   type={Definition},
   pages={},
   number={}
@@ -314,7 +314,7 @@
 
 @article{unbias,
   title={unbiased estimator},
-  subject={unbias},
+  author={unbias},
   type={Definition},
   pages={},
   number={}
@@ -322,7 +322,7 @@
 
 @article{effi,
   title={efficient},
-  subject={effi},
+  author={effi},
   type={Definition},
   pages={},
   number={}
@@ -330,7 +330,7 @@
 
 @article{consi,
   title={consistent},
-  subject={cons},
+  author={cons},
   type={Definition},
   pages={},
   number={}
@@ -338,7 +338,7 @@
 
 @article{asym,
   title={asymptotic},
-  subject={asym},
+  author={asym},
   type={Definition},
   pages={},
   number={}
@@ -346,7 +346,7 @@
 
 @article{indep,
   title={independent},
-  subject={indep},
+  author={indep},
   type={Definition},
   pages={},
   number={}
@@ -354,7 +354,7 @@
 
 @article{Basu,
   title={Basu's theorem},
-  subject={Basu},
+  author={Basu},
   type={Theorem},
   pages={262},
   number={6224}
@@ -362,7 +362,7 @@
 
 @article{MVUE,
   title={Minimum Variance Unbiased Estimator},
-  subject={MVUE},
+  author={MVUE},
   type={Definition},
   pages={},
   number={}
@@ -370,7 +370,7 @@
 
 @article{UMVUE,
   title={uniform minimum variance unbiased estimator},
-  subject={UMVUE},
+  author={UMVUE},
   type={Definition},
   pages={304--305},
   number={7307}
@@ -378,7 +378,7 @@
 
 @article{UMP,
   title={uniformly most powerful},
-  subject={UMP},
+  author={UMP},
   type={Definition},
   pages={388},
   number={8311}
@@ -386,7 +386,7 @@
 
 @article{MLR,
   title={monotone likelihood ratio},
-  subject={MLR},
+  author={MLR},
   type={Definition},
   pages={391},
   number={8316}
@@ -395,7 +395,7 @@
 
 @article{LimD,
   title={limiting distribution},
-  subject={LimD},
+  author={LimD},
   type={Definition},
   pages={},
   number={}
