--- a/docs/stat563/bib_math_stat.bib
+++ b/docs/stat563/bib_math_stat.bib
@@ -1,402 +1,402 @@
 
-@article{sample,
-  type={sample},
+@book{sample,
+  genre={sample},
   number={},
-  author={sample},
+  archive={sample},
   title={sample},
   pages={}
 }
 
-@article{CDF,
+@book{CDF,
   title={Cumulative distribution function $F_X(x)=P_X(X\le x)$},
-  author={CDF},
-  type={Definition},
+  archive={CDF},
+  genre={Definition},
   pages={26},
   number={1501}
 }
 
-@article{PDF,
+@book{PDF,
   title={probability density function},
-  author={PDF},
-  type={Definition},
+  archive={PDF},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{mean,
+@book{mean,
   title={expected value $Eg(X)=\sum_{-\infty}^\infty g(x)f_X(x)dx$},
-  author={mean},
-  type={Definition},
+  archive={mean},
+  genre={Definition},
   pages={50},
   number={2201}
 }
 
-@article{Var,
+@book{Var,
   title={variance},
-  author={Var},
-  type={Definition},
+  archive={Var},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{Cor,
+@book{Cor,
   title={correlation},
-  author={Cor},
-  type={Definition},
+  archive={Cor},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{Cov,
+@book{Cov,
   title={covariance},
-  author={Cov},
-  type={Definition},
+  archive={Cov},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{Unif,
+@book{Unif,
   title={Uniform distribution (a,b)},
-  author={Unif},
-  type={Distribution},
+  archive={Unif},
+  genre={Distribution},
   pages={},
   number={}
 }
 
-@article{Bern,
+@book{Bern,
   title={Bernoulli distribution (p)},
-  author={Bern},
-  type={Distribution},
+  archive={Bern},
+  genre={Distribution},
   pages={},
   number={}
 }
 
-@article{Bino,
+@book{Bino,
   title={Binomial distribution (n,p)},
-  author={Bino},
-  type={Distribution},
+  archive={Bino},
+  genre={Distribution},
   pages={},
   number={}
 }
 
-@article{Pois,
+@book{Pois,
   title={Poisson distribution $\lambda$},
-  author={Pois},
-  type={Distribution},
+  archive={Pois},
+  genre={Distribution},
   pages={84},
   number={3203}
 }
 
-@article{SNorm,
+@book{SNorm,
   title={Standard Normal distribution},
-  author={SNorm},
-  type={Distribution},
+  archive={SNorm},
+  genre={Distribution},
   pages={},
   number={}
 }
 
-@article{Norm,
+@book{Norm,
   title={Normal distribution},
-  author={Norm},
-  type={Distribution},
+  archive={Norm},
+  genre={Distribution},
   pages={},
   number={}
 }
 
 
-@article{Gamma,
+@book{Gamma,
   title={Gammal distribution},
-  author={Gamma},
-  type={Distribution},
+  archive={Gamma},
+  genre={Distribution},
   pages={},
   number={}
 }
 
-@article{Beta,
+@book{Beta,
   title={Beta distribution},
-  author={Beta},
-  type={Distribution},
+  archive={Beta},
+  genre={Distribution},
   pages={},
   number={}
 }
 
-@article{Expo,
+@book{Expo,
   title={Exponential distribution $\lambda$},
-  author={Expo},
-  type={Distribution},
+  archive={Expo},
+  genre={Distribution},
   pages={90},
   number={3301}
 }
 
-@article{t,
+@book{t,
   title={t distribution},
-  author={t},
-  type={Distribution},
+  archive={t},
+  genre={Distribution},
   pages={},
   number={}
 }
 
-@article{Weib,
+@book{Weib,
   title={Weibull distribution},
-  author={Weib},
-  type={Distribution},
+  archive={Weib},
+  genre={Distribution},
   pages={},
   number={}
 }
 
-@article{Laplace,
+@book{Laplace,
   title={Laplace distribution},
-  author={Laplace},
-  type={Distribution},
+  archive={Laplace},
+  genre={Distribution},
   pages={},
   number={}
 }
 
-@article{SPower,
+@book{SPower,
   title={Standard Power distribution},
-  author={Power},
-  type={Distribution},
+  archive={Power},
+  genre={Distribution},
   pages={},
   number={}
 }
 
-@article{lifetime,
+@book{lifetime,
   title={lifetime},
-  author={lifetime},
-  type={Definition},
+  archive={lifetime},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{MGF,
+@book{MGF,
   title={moment generating function},
-  author={MGF},
-  type={Definition},
+  archive={MGF},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{joint,
+@book{joint,
   title={joint pdf},
-  author={joint},
-  type={Definition},
+  archive={joint},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{cond,
+@book{cond,
   title={conditional pdf},
-  author={cond},
-  type={Definition},
+  archive={cond},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{marg,
+@book{marg,
   title={marginal pdf},
-  author={marg},
-  type={Definition},
+  archive={marg},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{trans,
+@book{trans,
   title={transformation},
-  author={trans},
-  type={Definition},
+  archive={trans},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{Cheb,
+@book{Cheb,
   title={Chebychev inequality},
-  author={Cheb},
-  type={Theorem},
+  archive={Cheb},
+  genre={Theorem},
   pages={111},
   number={3601}
 }
 
-@article{HypoT,
+@book{HypoT,
   title={Hypothesis Test},
-  author={HypoT},
-  type={Definition},
+  archive={HypoT},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{power,
+@book{power,
   title={power function },
-  author={power},
-  type={Definition},
+  archive={power},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{LRT,
+@book{LRT,
   title={likelihood ratio test},
-  author={LRT},
-  type={Definition},
+  archive={LRT},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{MOM,
+@book{MOM,
   title={Method of Moments},
-  author={MOM},
-  type={Definition},
+  archive={MOM},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{MLE,
+@book{MLE,
   title={Maximum Likelihood Estimators},
-  author={MLE},
-  type={Definition},
+  archive={MLE},
+  genre={Definition},
   pages={315},
   number={7202}
 }
 
-@article{MSE,
+@book{MSE,
   title={mean-squared error},
-  author={MSE},
-  type={Definition},
+  archive={MSE},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{BayesE,
+@book{BayesE,
   title={Bayes estimator},
-  author={BayesE},
-  type={Definition},
+  archive={BayesE},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{FishI,
+@book{FishI,
   title={Fisher information},
-  author={FishI},
-  type={Definition},
+  archive={FishI},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{CI,
+@book{CI,
   title={confidence interval},
-  author={CI},
-  type={Definition},
+  archive={CI},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{CRLB,
+@book{CRLB,
   title={Cramer-Rao Lower Bound},
-  author={CRLB},
-  type={Definition},
+  archive={CRLB},
+  genre={Definition},
   pages={335(361)},
   number={}
 }
 
-@article{suff,
+@book{suff,
   title={sufficient statistic},
-  author={suff},
-  type={Definition},
+  archive={suff},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{comp,
+@book{comp,
   title={complete},
-  author={comp},
-  type={Definition},
+  archive={comp},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{unbias,
+@book{unbias,
   title={unbiased estimator},
-  author={unbias},
-  type={Definition},
+  archive={unbias},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{effi,
+@book{effi,
   title={efficient},
-  author={effi},
-  type={Definition},
+  archive={effi},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{consi,
+@book{consi,
   title={consistent},
-  author={cons},
-  type={Definition},
+  archive={cons},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{asym,
+@book{asym,
   title={asymptotic},
-  author={asym},
-  type={Definition},
+  archive={asym},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{indep,
+@book{indep,
   title={independent},
-  author={indep},
-  type={Definition},
+  archive={indep},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{Basu,
+@book{Basu,
   title={Basu's theorem},
-  author={Basu},
-  type={Theorem},
+  archive={Basu},
+  genre={Theorem},
   pages={262},
   number={6224}
 }
 
-@article{MVUE,
+@book{MVUE,
   title={Minimum Variance Unbiased Estimator},
-  author={MVUE},
-  type={Definition},
+  archive={MVUE},
+  genre={Definition},
   pages={},
   number={}
 }
 
-@article{UMVUE,
+@book{UMVUE,
   title={uniform minimum variance unbiased estimator},
-  author={UMVUE},
-  type={Definition},
+  archive={UMVUE},
+  genre={Definition},
   pages={304--305},
   number={7307}
 }
 
-@article{UMP,
+@book{UMP,
   title={uniformly most powerful},
-  author={UMP},
-  type={Definition},
+  archive={UMP},
+  genre={Definition},
   pages={388},
   number={8311}
 }
 
-@article{MLR,
+@book{MLR,
   title={monotone likelihood ratio},
-  author={MLR},
-  type={Definition},
+  archive={MLR},
+  genre={Definition},
   pages={391},
   number={8316}
 }
 
 
-@article{LimD,
+@book{LimD,
   title={limiting distribution},
-  author={LimD},
-  type={Definition},
+  archive={LimD},
+  genre={Definition},
   pages={},
   number={}
 }
