--- a/docs/stat563/qe_math_stat.Rmd
+++ b/docs/stat563/qe_math_stat.Rmd
@@ -1564,7 +1564,7 @@ $f(y_1,y_2)$
 
 $f(x,w)$
 
-$f(x)=5e^{-10|x|}$  [@Laplace]
+$f(x)=5e^{-10|x|}$  [@Laplace] [Double Expo]
 
 ### 2015S3A
 [2005S8][] [2014SA3][] [2014SA5][] [2016S3][] [@SNorm] [@mean]
