--- a/static/stat563/bib_math_stat.bib
+++ b/static/stat563/bib_math_stat.bib
@@ -1,402 +1,402 @@
 
 @book{sample,
-  genre={sample},
-  number={},
-  archive={sample},
+  type={sample},
+  section={},
+  ShortTitle={sample},
   title={sample},
   pages={}
 }
 
 @book{CDF,
   title={Cumulative distribution function $F_X(x)=P_X(X\le x)$},
-  archive={CDF},
-  genre={Definition},
+  ShortTitle={CDF},
+  type={Definition},
   pages={26},
-  number={1501}
+  section={1501}
 }
 
 @book{PDF,
   title={probability density function},
-  archive={PDF},
-  genre={Definition},
+  ShortTitle={PDF},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{mean,
   title={expected value $Eg(X)=\sum_{-\infty}^\infty g(x)f_X(x)dx$},
-  archive={mean},
-  genre={Definition},
+  ShortTitle={mean},
+  type={Definition},
   pages={50},
-  number={2201}
+  section={2201}
 }
 
 @book{Var,
   title={variance},
-  archive={Var},
-  genre={Definition},
+  ShortTitle={Var},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Cor,
   title={correlation},
-  archive={Cor},
-  genre={Definition},
+  ShortTitle={Cor},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Cov,
   title={covariance},
-  archive={Cov},
-  genre={Definition},
+  ShortTitle={Cov},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Unif,
   title={Uniform distribution (a,b)},
-  archive={Unif},
-  genre={Distribution},
+  ShortTitle={Unif},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Bern,
   title={Bernoulli distribution (p)},
-  archive={Bern},
-  genre={Distribution},
+  ShortTitle={Bern},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Bino,
   title={Binomial distribution (n,p)},
-  archive={Bino},
-  genre={Distribution},
+  ShortTitle={Bino},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Pois,
   title={Poisson distribution $\lambda$},
-  archive={Pois},
-  genre={Distribution},
+  ShortTitle={Pois},
+  type={Distribution},
   pages={84},
-  number={3203}
+  section={3203}
 }
 
 @book{SNorm,
   title={Standard Normal distribution},
-  archive={SNorm},
-  genre={Distribution},
+  ShortTitle={SNorm},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Norm,
   title={Normal distribution},
-  archive={Norm},
-  genre={Distribution},
+  ShortTitle={Norm},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 
 @book{Gamma,
   title={Gammal distribution},
-  archive={Gamma},
-  genre={Distribution},
+  ShortTitle={Gamma},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Beta,
   title={Beta distribution},
-  archive={Beta},
-  genre={Distribution},
+  ShortTitle={Beta},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Expo,
   title={Exponential distribution $\lambda$},
-  archive={Expo},
-  genre={Distribution},
+  ShortTitle={Expo},
+  type={Distribution},
   pages={90},
-  number={3301}
+  section={3301}
 }
 
 @book{t,
   title={t distribution},
-  archive={t},
-  genre={Distribution},
+  ShortTitle={t},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Weib,
   title={Weibull distribution},
-  archive={Weib},
-  genre={Distribution},
+  ShortTitle={Weib},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Laplace,
   title={Laplace distribution},
-  archive={Laplace},
-  genre={Distribution},
+  ShortTitle={Laplace},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 @book{SPower,
   title={Standard Power distribution},
-  archive={Power},
-  genre={Distribution},
+  ShortTitle={Power},
+  type={Distribution},
   pages={},
-  number={}
+  section={}
 }
 
 @book{lifetime,
   title={lifetime},
-  archive={lifetime},
-  genre={Definition},
+  ShortTitle={lifetime},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{MGF,
   title={moment generating function},
-  archive={MGF},
-  genre={Definition},
+  ShortTitle={MGF},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{joint,
   title={joint pdf},
-  archive={joint},
-  genre={Definition},
+  ShortTitle={joint},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{cond,
   title={conditional pdf},
-  archive={cond},
-  genre={Definition},
+  ShortTitle={cond},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{marg,
   title={marginal pdf},
-  archive={marg},
-  genre={Definition},
+  ShortTitle={marg},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{trans,
   title={transformation},
-  archive={trans},
-  genre={Definition},
+  ShortTitle={trans},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Cheb,
   title={Chebychev inequality},
-  archive={Cheb},
-  genre={Theorem},
+  ShortTitle={Cheb},
+  type={Theorem},
   pages={111},
-  number={3601}
+  section={3601}
 }
 
 @book{HypoT,
   title={Hypothesis Test},
-  archive={HypoT},
-  genre={Definition},
+  ShortTitle={HypoT},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{power,
   title={power function },
-  archive={power},
-  genre={Definition},
+  ShortTitle={power},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{LRT,
   title={likelihood ratio test},
-  archive={LRT},
-  genre={Definition},
+  ShortTitle={LRT},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{MOM,
   title={Method of Moments},
-  archive={MOM},
-  genre={Definition},
+  ShortTitle={MOM},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{MLE,
   title={Maximum Likelihood Estimators},
-  archive={MLE},
-  genre={Definition},
+  ShortTitle={MLE},
+  type={Definition},
   pages={315},
-  number={7202}
+  section={7202}
 }
 
 @book{MSE,
   title={mean-squared error},
-  archive={MSE},
-  genre={Definition},
+  ShortTitle={MSE},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{BayesE,
   title={Bayes estimator},
-  archive={BayesE},
-  genre={Definition},
+  ShortTitle={BayesE},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{FishI,
   title={Fisher information},
-  archive={FishI},
-  genre={Definition},
+  ShortTitle={FishI},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{CI,
   title={confidence interval},
-  archive={CI},
-  genre={Definition},
+  ShortTitle={CI},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{CRLB,
   title={Cramer-Rao Lower Bound},
-  archive={CRLB},
-  genre={Definition},
+  ShortTitle={CRLB},
+  type={Definition},
   pages={335(361)},
-  number={}
+  section={}
 }
 
 @book{suff,
   title={sufficient statistic},
-  archive={suff},
-  genre={Definition},
+  ShortTitle={suff},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{comp,
   title={complete},
-  archive={comp},
-  genre={Definition},
+  ShortTitle={comp},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{unbias,
   title={unbiased estimator},
-  archive={unbias},
-  genre={Definition},
+  ShortTitle={unbias},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{effi,
   title={efficient},
-  archive={effi},
-  genre={Definition},
+  ShortTitle={effi},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{consi,
   title={consistent},
-  archive={cons},
-  genre={Definition},
+  ShortTitle={cons},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{asym,
   title={asymptotic},
-  archive={asym},
-  genre={Definition},
+  ShortTitle={asym},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{indep,
   title={independent},
-  archive={indep},
-  genre={Definition},
+  ShortTitle={indep},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{Basu,
   title={Basu's theorem},
-  archive={Basu},
-  genre={Theorem},
+  ShortTitle={Basu},
+  type={Theorem},
   pages={262},
-  number={6224}
+  section={6224}
 }
 
 @book{MVUE,
   title={Minimum Variance Unbiased Estimator},
-  archive={MVUE},
-  genre={Definition},
+  ShortTitle={MVUE},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
 
 @book{UMVUE,
   title={uniform minimum variance unbiased estimator},
-  archive={UMVUE},
-  genre={Definition},
+  ShortTitle={UMVUE},
+  type={Definition},
   pages={304--305},
-  number={7307}
+  section={7307}
 }
 
 @book{UMP,
   title={uniformly most powerful},
-  archive={UMP},
-  genre={Definition},
+  ShortTitle={UMP},
+  type={Definition},
   pages={388},
-  number={8311}
+  section={8311}
 }
 
 @book{MLR,
   title={monotone likelihood ratio},
-  archive={MLR},
-  genre={Definition},
+  ShortTitle={MLR},
+  type={Definition},
   pages={391},
-  number={8316}
+  section={8316}
 }
 
 
 @book{LimD,
   title={limiting distribution},
-  archive={LimD},
-  genre={Definition},
+  ShortTitle={LimD},
+  type={Definition},
   pages={},
-  number={}
+  section={}
 }
