--- a/docs/stat563/bib_math_stat.bib
+++ b/docs/stat563/bib_math_stat.bib
@@ -2,14 +2,14 @@
 @book{sample,
   type={sample},
   section={},
-  ShortTitle={sample},
+  abbr={sample},
   title={sample},
   pages={}
 }
 
 @book{CDF,
   title={Cumulative distribution function $F_X(x)=P_X(X\le x)$},
-  ShortTitle={CDF},
+  abbr={CDF},
   type={Definition},
   pages={26},
   section={1501}
@@ -17,7 +17,7 @@
 
 @book{PDF,
   title={probability density function},
-  ShortTitle={PDF},
+  abbr={PDF},
   type={Definition},
   pages={},
   section={}
@@ -25,7 +25,7 @@
 
 @book{mean,
   title={expected value $Eg(X)=\sum_{-\infty}^\infty g(x)f_X(x)dx$},
-  ShortTitle={mean},
+  abbr={mean},
   type={Definition},
   pages={50},
   section={2201}
@@ -33,7 +33,7 @@
 
 @book{Var,
   title={variance},
-  ShortTitle={Var},
+  abbr={Var},
   type={Definition},
   pages={},
   section={}
@@ -41,7 +41,7 @@
 
 @book{Cor,
   title={correlation},
-  ShortTitle={Cor},
+  abbr={Cor},
   type={Definition},
   pages={},
   section={}
@@ -49,7 +49,7 @@
 
 @book{Cov,
   title={covariance},
-  ShortTitle={Cov},
+  abbr={Cov},
   type={Definition},
   pages={},
   section={}
@@ -57,7 +57,7 @@
 
 @book{Unif,
   title={Uniform distribution (a,b)},
-  ShortTitle={Unif},
+  abbr={Unif},
   type={Distribution},
   pages={},
   section={}
@@ -65,7 +65,7 @@
 
 @book{Bern,
   title={Bernoulli distribution (p)},
-  ShortTitle={Bern},
+  abbr={Bern},
   type={Distribution},
   pages={},
   section={}
@@ -73,7 +73,7 @@
 
 @book{Bino,
   title={Binomial distribution (n,p)},
-  ShortTitle={Bino},
+  abbr={Bino},
   type={Distribution},
   pages={},
   section={}
@@ -81,7 +81,7 @@
 
 @book{Pois,
   title={Poisson distribution $\lambda$},
-  ShortTitle={Pois},
+  abbr={Pois},
   type={Distribution},
   pages={84},
   section={3203}
@@ -89,7 +89,7 @@
 
 @book{SNorm,
   title={Standard Normal distribution},
-  ShortTitle={SNorm},
+  abbr={SNorm},
   type={Distribution},
   pages={},
   section={}
@@ -97,7 +97,7 @@
 
 @book{Norm,
   title={Normal distribution},
-  ShortTitle={Norm},
+  abbr={Norm},
   type={Distribution},
   pages={},
   section={}
@@ -106,7 +106,7 @@
 
 @book{Gamma,
   title={Gammal distribution},
-  ShortTitle={Gamma},
+  abbr={Gamma},
   type={Distribution},
   pages={},
   section={}
@@ -114,7 +114,7 @@
 
 @book{Beta,
   title={Beta distribution},
-  ShortTitle={Beta},
+  abbr={Beta},
   type={Distribution},
   pages={},
   section={}
@@ -122,7 +122,7 @@
 
 @book{Expo,
   title={Exponential distribution $\lambda$},
-  ShortTitle={Expo},
+  abbr={Expo},
   type={Distribution},
   pages={90},
   section={3301}
@@ -130,7 +130,7 @@
 
 @book{t,
   title={t distribution},
-  ShortTitle={t},
+  abbr={t},
   type={Distribution},
   pages={},
   section={}
@@ -138,7 +138,7 @@
 
 @book{Weib,
   title={Weibull distribution},
-  ShortTitle={Weib},
+  abbr={Weib},
   type={Distribution},
   pages={},
   section={}
@@ -146,7 +146,7 @@
 
 @book{Laplace,
   title={Laplace distribution},
-  ShortTitle={Laplace},
+  abbr={Laplace},
   type={Distribution},
   pages={},
   section={}
@@ -154,7 +154,7 @@
 
 @book{SPower,
   title={Standard Power distribution},
-  ShortTitle={Power},
+  abbr={Power},
   type={Distribution},
   pages={},
   section={}
@@ -162,7 +162,7 @@
 
 @book{lifetime,
   title={lifetime},
-  ShortTitle={lifetime},
+  abbr={lifetime},
   type={Definition},
   pages={},
   section={}
@@ -170,7 +170,7 @@
 
 @book{MGF,
   title={moment generating function},
-  ShortTitle={MGF},
+  abbr={MGF},
   type={Definition},
   pages={},
   section={}
@@ -178,7 +178,7 @@
 
 @book{joint,
   title={joint pdf},
-  ShortTitle={joint},
+  abbr={joint},
   type={Definition},
   pages={},
   section={}
@@ -186,7 +186,7 @@
 
 @book{cond,
   title={conditional pdf},
-  ShortTitle={cond},
+  abbr={cond},
   type={Definition},
   pages={},
   section={}
@@ -194,7 +194,7 @@
 
 @book{marg,
   title={marginal pdf},
-  ShortTitle={marg},
+  abbr={marg},
   type={Definition},
   pages={},
   section={}
@@ -202,7 +202,7 @@
 
 @book{trans,
   title={transformation},
-  ShortTitle={trans},
+  abbr={trans},
   type={Definition},
   pages={},
   section={}
@@ -210,7 +210,7 @@
 
 @book{Cheb,
   title={Chebychev inequality},
-  ShortTitle={Cheb},
+  abbr={Cheb},
   type={Theorem},
   pages={111},
   section={3601}
@@ -218,7 +218,7 @@
 
 @book{HypoT,
   title={Hypothesis Test},
-  ShortTitle={HypoT},
+  abbr={HypoT},
   type={Definition},
   pages={},
   section={}
@@ -226,7 +226,7 @@
 
 @book{power,
   title={power function },
-  ShortTitle={power},
+  abbr={power},
   type={Definition},
   pages={},
   section={}
@@ -234,7 +234,7 @@
 
 @book{LRT,
   title={likelihood ratio test},
-  ShortTitle={LRT},
+  abbr={LRT},
   type={Definition},
   pages={},
   section={}
@@ -242,7 +242,7 @@
 
 @book{MOM,
   title={Method of Moments},
-  ShortTitle={MOM},
+  abbr={MOM},
   type={Definition},
   pages={},
   section={}
@@ -250,7 +250,7 @@
 
 @book{MLE,
   title={Maximum Likelihood Estimators},
-  ShortTitle={MLE},
+  abbr={MLE},
   type={Definition},
   pages={315},
   section={7202}
@@ -258,7 +258,7 @@
 
 @book{MSE,
   title={mean-squared error},
-  ShortTitle={MSE},
+  abbr={MSE},
   type={Definition},
   pages={},
   section={}
@@ -266,7 +266,7 @@
 
 @book{BayesE,
   title={Bayes estimator},
-  ShortTitle={BayesE},
+  abbr={BayesE},
   type={Definition},
   pages={},
   section={}
@@ -274,7 +274,7 @@
 
 @book{FishI,
   title={Fisher information},
-  ShortTitle={FishI},
+  abbr={FishI},
   type={Definition},
   pages={},
   section={}
@@ -282,7 +282,7 @@
 
 @book{CI,
   title={confidence interval},
-  ShortTitle={CI},
+  abbr={CI},
   type={Definition},
   pages={},
   section={}
@@ -290,7 +290,7 @@
 
 @book{CRLB,
   title={Cramer-Rao Lower Bound},
-  ShortTitle={CRLB},
+  abbr={CRLB},
   type={Definition},
   pages={335(361)},
   section={}
@@ -298,7 +298,7 @@
 
 @book{suff,
   title={sufficient statistic},
-  ShortTitle={suff},
+  abbr={suff},
   type={Definition},
   pages={},
   section={}
@@ -306,7 +306,7 @@
 
 @book{comp,
   title={complete},
-  ShortTitle={comp},
+  abbr={comp},
   type={Definition},
   pages={},
   section={}
@@ -314,7 +314,7 @@
 
 @book{unbias,
   title={unbiased estimator},
-  ShortTitle={unbias},
+  abbr={unbias},
   type={Definition},
   pages={},
   section={}
@@ -322,7 +322,7 @@
 
 @book{effi,
   title={efficient},
-  ShortTitle={effi},
+  abbr={effi},
   type={Definition},
   pages={},
   section={}
@@ -330,7 +330,7 @@
 
 @book{consi,
   title={consistent},
-  ShortTitle={cons},
+  abbr={cons},
   type={Definition},
   pages={},
   section={}
@@ -338,7 +338,7 @@
 
 @book{asym,
   title={asymptotic},
-  ShortTitle={asym},
+  abbr={asym},
   type={Definition},
   pages={},
   section={}
@@ -346,7 +346,7 @@
 
 @book{indep,
   title={independent},
-  ShortTitle={indep},
+  abbr={indep},
   type={Definition},
   pages={},
   section={}
@@ -354,7 +354,7 @@
 
 @book{Basu,
   title={Basu's theorem},
-  ShortTitle={Basu},
+  abbr={Basu},
   type={Theorem},
   pages={262},
   section={6224}
@@ -362,7 +362,7 @@
 
 @book{MVUE,
   title={Minimum Variance Unbiased Estimator},
-  ShortTitle={MVUE},
+  abbr={MVUE},
   type={Definition},
   pages={},
   section={}
@@ -370,7 +370,7 @@
 
 @book{UMVUE,
   title={uniform minimum variance unbiased estimator},
-  ShortTitle={UMVUE},
+  abbr={UMVUE},
   type={Definition},
   pages={304--305},
   section={7307}
@@ -378,7 +378,7 @@
 
 @book{UMP,
   title={uniformly most powerful},
-  ShortTitle={UMP},
+  abbr={UMP},
   type={Definition},
   pages={388},
   section={8311}
@@ -386,7 +386,7 @@
 
 @book{MLR,
   title={monotone likelihood ratio},
-  ShortTitle={MLR},
+  abbr={MLR},
   type={Definition},
   pages={391},
   section={8316}
@@ -395,7 +395,7 @@
 
 @book{LimD,
   title={limiting distribution},
-  ShortTitle={LimD},
+  abbr={LimD},
   type={Definition},
   pages={},
   section={}
