--- a/static/stat563/qe_math_stat.Rmd
+++ b/static/stat563/qe_math_stat.Rmd
@@ -1564,7 +1564,11 @@ $f(y_1,y_2)$
 
 $f(x,w)$
 
-$f(x)=5e^{-10|x|}$  [@Laplace] [Double Expo]
+$f(x)=5e^{-10|x|}$  pdf exist for $x>0$
+
+[@Laplace] [Double Expo]
+
+
 
 ### 2015S3A
 [2005S8][] [2014SA3][] [2014SA5][] [2016S3][] [@SNorm] [@mean]
